tests/positive/basic/split_no_match/input.ci
void main() {
    string[] xs = split("alpha", ",");
    print(toString(count(xs)) + "\n");
    print(xs[0] + "\n");
}
