tests/negative/runtime/exec_invalid_env_entry/input.ci
void main() {
    ExecResult r = exec(["/usr/bin/true"], ["BROKEN"]);
    print(toString(execStatus(r)) + "\n");
}
